[package]
name = "rawr_attribute"
description = "Attribute embedding the state and location of code in a git repository."

version = "0.1.0"
edition = "2021"
license = "MIT"

authors = ["Thomas Johnson <NTmatter@gmail.com>"]
repository = "https://github.com/NTmatter/rawr_attribute.git"

publish = false

[lib]
proc-macro = true

[dependencies]
