[workspace]
resolver = "3"
members = ["rawr_macro", "rawr_proc_macro"]

[workspace.package]
publish = false
description = "Marker macros for referencing the state of items in a git repository."

edition = "2024"
license = "MIT"

authors = ["Thomas Johnson <NTmatter@gmail.com>"]
repository = "https://github.com/NTmatter/rawr_attribute.git"
